# vectera-rag-demo

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  supabase.sql
scripts/: evaluate_retrieval.py
src/: generator.py  ingestion.py  retriever.py
src/core/: clients.py  config.py  logger.py
src/utils/: embeddings.py  entity_registry.py  file_utils.py  parser.py
tests/: test_evaluate_retrieval.py  test_generator.py  test_ingestion.py  test_retriever.py
