[project]
name = "vectera-rag-demo"
version = "0.0.1"
description = "RAG demo for Vectera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-text-splitters>=1.1.2",
    "llama-cloud>=2.4.1",
    "openai>=2.35.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "reductoai>=0.22.0",
    "serpapi>=1.0.2",
    "streamlit>=1.57.0",
    "supabase>=2.30.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
